@@ -1,6 +1,5 @@
 package com.wcc.platform.repository.surrealdb;
 
-import static com.wcc.platform.factories.SetupFactories.createFooterPageTest;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyMap;
@@ -12,10 +11,9 @@ import static org.mockito.Mockito.when;
 
 import com.surrealdb.driver.SyncSurrealDriver;
 import com.wcc.platform.domain.cms.PageType;
-import com.wcc.platform.domain.cms.pages.FooterPage;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -24,56 +22,55 @@ import org.mockito.MockitoAnnotations;
 class SurrealDbPageRepositoryTest {
 
   private static final String TABLE = SurrealDbPageRepository.TABLE;
+  private static final String PAGE = "{ 'page': { 'title': 'title 1' } }";
 
   @Mock private SyncSurrealDriver mockDriver;
 
-  private SurrealDbPageRepository<FooterPage> repository;
+  private SurrealDbPageRepository repository;
 
   @BeforeEach
   void setUp() {
     MockitoAnnotations.openMocks(this);
 
-    repository = new SurrealDbPageRepository<>(mockDriver, FooterPage.class);
+    repository = new SurrealDbPageRepository(mockDriver);
   }
 
   @Test
   void testSave() {
-    FooterPage entity = createFooterPageTest();
-    when(mockDriver.create(TABLE, entity)).thenReturn(entity);
+    when(mockDriver.create(TABLE, PAGE)).thenReturn(PAGE);
 
-    var savedEntity = repository.save(entity);
+    var savedEntity = repository.save(PAGE);
 
-    verify(mockDriver, times(1)).create(TABLE, entity);
-    assertEquals(entity, savedEntity);
+    verify(mockDriver, times(1)).create(TABLE, PAGE);
+    assertEquals(PAGE, savedEntity);
   }
 
   @Test
   void testFindAll() {
-    List<FooterPage> mockResult = List.of(createFooterPageTest());
+    List<String> mockResult = Collections.singletonList(PAGE);
+    when(mockDriver.select(TABLE, String.class)).thenReturn(mockResult);
 
-    when(mockDriver.select(TABLE, FooterPage.class)).thenReturn(mockResult);
+    Collection<String> result = repository.findAll();
 
-    Collection<FooterPage> result = repository.findAll();
-
-    verify(mockDriver, times(1)).select(TABLE, FooterPage.class);
+    verify(mockDriver, times(1)).select(TABLE, String.class);
     assertEquals(mockResult, result);
   }
 
   @Test
   void testFindByIdNotFoundCase1() {
-    Optional<FooterPage> result = repository.findById(PageType.FOOTER.name());
+    var result = repository.findById(PageType.FOOTER.name());
 
-    verify(mockDriver, times(1)).query(anyString(), anyMap(), eq(FooterPage.class));
+    verify(mockDriver, times(1)).query(anyString(), anyMap(), eq(String.class));
     assertTrue(result.isEmpty());
   }
 
   @Test
   void testFindByIdNotFoundCase2() {
-    when(mockDriver.query(anyString(), anyMap(), eq(FooterPage.class))).thenReturn(List.of());
+    when(mockDriver.query(anyString(), anyMap(), eq(String.class))).thenReturn(List.of());
 
-    Optional<FooterPage> result = repository.findById("test-id-2");
+    var result = repository.findById("test-id-2");
 
-    verify(mockDriver, times(1)).query(anyString(), anyMap(), eq(FooterPage.class));
+    verify(mockDriver, times(1)).query(anyString(), anyMap(), eq(String.class));
     assertTrue(result.isEmpty());
   }
 
